--- a/PhotoGame/PhotoGame-Info.plist
+++ b/PhotoGame/PhotoGame-Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>PhotoGame.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>GRJXQVEBX8.photogame.photogame</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
